--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="main.css">
-<title>Matt O'Hagan</title>
+   <link rel="stylesheet" type="text/css" href="main.css">
+   <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900' rel='stylesheet' type='text/css'>
+
+   <title>Matt O'Hagan</title>
 </head>
 <body>
-<h1>welcome.</h1>
+   <h1>welcome.</h1>
 </body>
-
 
 </html>
