--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <h1>welcome.</h1>
+   <h4>welcome.</h1>
+
+   <div style="margin: 50% 50px 50px 65%">
+   <h5>resume</h5>
+   <h5>about</h5>
+   <h5>hackfsu</h5>
+   <h5>twitter</h5>
+   </div>
 </body>
 
 </html>
