--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <h4>welcome.</h1>
+   <h4>matt o'hagan</h1>
 
-   <div style="margin: 50% 50px 50px 65%">
+   <div style="margin-top: 30%; margin-right: 65%">
    <h5>resume</h5>
    <h5>about</h5>
    <h5>hackfsu</h5>
