--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <h4>matt o'hagan</h1>
 
-   <div style="margin-top: 30%; margin-right: 65%">
+   <div style="margin-top: 25%; margin-left: 65%">
    <h5>resume</h5>
    <h5>about</h5>
    <h5>hackfsu</h5>
