--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <h4>matt o'hagan</h1>
+   <div style="margin-top: 70%">
+      <h4>matt o'hagan</h1>
+   </div>
 
-   <div style="margin-top: 25%; margin-left: 65%">
-   <h5>resume</h5>
-   <h5>about</h5>
-   <h5>hackfsu</h5>
-   <h5>twitter</h5>
+   <div style="margin-top: 20%; margin-left: 75%">
+      <h5>resume</br>
+      about</br>
+      hackfsu</br>
+      twitter</h5>
    </div>
 </body>
 
