--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <div style="margin-top: 70%">
-      <h4>matt o'hagan</h1>
-   </div>
-
    <div style="margin-top: 20%; margin-left: 75%">
       <h5>resume</br>
       about</br>
       hackfsu</br>
       twitter</h5>
+   </div>
+
+   <div>
+      <h4>matt o'hagan</h1>
    </div>
 </body>
 
