--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <div style="margin-top: 25%; margin-left: 85%">
+   <div style="margin-top: 25%; margin-left: 85%; position: fixed;">
       <h5>resume</br>
       <a href="google.com">about</a></br>
       <a href="http://hackfsu.com">hackfsu</a></br>
       twitter</h5>
    </div>
 
-   <div style="margin-top: -10%">
+   <div style="margin-top: -10%; position: fixed;">
       <h4>matt o'hagan</h1>
    </div>
 </body>
