--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
    <div style="margin-top: 23%; margin-left: 85%; position: fixed;">
-      <h5>resume</br>
-      <a href="google.com">about</a></br>
+      <h5>
+      <a href="">resume</a></br>
+      <a href="">about</a></br>
       <a href="http://hackfsu.com">hackfsu</a></br>
-      twitter</h5>
+      <a href="https://twitter.com/MC_hagan">twitter</a></h5>
    </div>
 
-   <div style="position: fixed;">
+   <div style="margin-top: 30%; position: fixed;">
       <h4>matt o'hagan</h1>
    </div>
 </body>
