--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <div style="margin-top: 23%; margin-left: 85%; position: fixed;">
+   <div style="margin-top: 23%; margin-left: 85%; margin-right: 15px; position: fixed;">
       <h5>
       <a href="">resume</a></br>
       <a href="">about</a></br>
@@ -14,7 +14,7 @@
       <a href="https://twitter.com/MC_hagan">twitter</a></h5>
    </div>
 
-   <div style="margin-top: 30%; position: fixed;">
+   <div style="margin-top: 35%; margin-left: 15px; position: fixed;">
       <h4>matt o'hagan</h1>
    </div>
 </body>
