--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <div style="margin-top: 23%; margin-left: 85%; margin-right: 40px; position: fixed; width: 300px;">
+   <div style="margin-top: 23%; margin-left: 85%; margin-right: 60px; margin-bottom: 15px; position: fixed; width: 200px;">
       <h5>
       <a href="">resume</a></br>
       <a href="">about</a></br>
@@ -14,7 +14,7 @@
       <a href="https://twitter.com/MC_hagan">twitter</a></h5>
    </div>
 
-   <div style="margin-top: 38%; margin-left: 15px; position: fixed;">
+   <div style="margin-top: 38.5%; margin-left: 15px; margin-bottom: 15px; position: fixed;">
       <h4>matt o'hagan</h1>
    </div>
 </body>
