--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <div style="margin-top: 23%; margin-left: 85%; margin-right: 60px; margin-bottom: 15px; position: fixed; width: 200px;">
+   <div style="margin-top: 27%; margin-left: 82%; padding-left: 10px; margin-bottom: 30px; position: fixed;">
+
+   <!-- 
       <h5>
       <a href="">resume</a></br>
       <a href="">about</a></br>
       <a href="http://hackfsu.com">hackfsu</a></br>
       <a href="https://twitter.com/MC_hagan">twitter</a></h5>
+   -->
+
+   <ul class="nav">
+      <li><a href="">resume</a></li>
+      <li><a href="">about</a></li>
+      <li><a href="http://hackfsu.com">hackfsu</a></li>
+      <li><a href="https://twitter.com/MC_hagan">twitter</a></li>
+   </ul>
    </div>
 
    <div style="margin-top: 38.5%; margin-left: 15px; margin-bottom: 15px; position: fixed;">
