added buggy residing top line

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
    <title>Matt O'Hagan</title>
 </head>
 <body>
-   <div style="margin-top: 28%; margin-left: 82%; padding-left: 10px; margin-bottom: 30px; position: fixed;">
 
-   <!-- 
-      <h5>
-      <a href="">resume</a></br>
-      <a href="">about</a></br>
-      <a href="http://hackfsu.com">hackfsu</a></br>
-      <a href="https://twitter.com/MC_hagan">twitter</a></h5>
-   -->
+<!-- attempting faux absolute positioning -->
+<div style="margin-top: 40px; float:left; width 100%; display: block; position: relative;">
+   <div style="position: relative; left: 100%; float: left; margin-left: -13%;">
+      <div id="first"> currently residing at: </div>
+      <div id="second"> Florida State University</div>
+      <div style="clear: both;"></div>
+   </div>
+</div>
+
+   <div style="margin-top: 27%; margin-left: 82%; padding-left: 10px; margin-bottom: 30px; position: fixed;">
 
    <ul class="nav">
       <li><a href="">resume</a></li>
@@ -24,7 +26,7 @@
    </ul>
    </div>
 
-   <div style="margin-top: 38.5%; margin-left: 55px; margin-bottom: 15px; position: fixed;">
+   <div style="margin-top: 37.5%; margin-left: 55px; margin-bottom: 15px; position: fixed;">
       <h4>matt o'hagan</h1>
    </div>
 </body>
