added info/styling on about/home page

--- a/index.html
+++ b/index.html
@@ -9,19 +9,53 @@
 
 <!-- attempting faux absolute positioning -->
 <div style="overflow: hidden; border: 1px solid #fff; border-radius: 2px;">
+
 <div class="line">
-   <div id="header">
-      <div id="first"> currently residing at: </div>
+   <div class="header">
+      <div id="first"> born and raised in </div>
+      <div id="second"> Michigan</div>
+      <!-- <div style="clear: both;"></div> -->
+   </div>
+</div>
+
+<div class="line">
+   <div class="header l1">
+      <div id="first"> full-time student pursuing </div>
       <div id="second"> Florida State University</div>
       <!-- <div style="clear: both;"></div> -->
    </div>
 </div>
 
+<div class="line">
+   <div class="header l2">
+      <div id="first"> avid and passionate </div>
+      <div id="second"> Hacker</div>
+      <!-- <div style="clear: both;"></div> -->
+   </div>
+</div>
+
+<div class="line">
+   <div class="header l3">
+      <div id="first"> hackathons attended </div>
+      <div id="second"> HackNC </div>
+      <!-- <div style="clear: both;"></div> -->
+   </div>
+</div>
+
+<div class="line">
+   <div class="header l4">
+      <div id="first"> dabble in </div>
+      <div id="second"> HTML </div>
+      <!-- <div style="clear: both;"></div> -->
+   </div>
+</div>
    <!-- 
    <div style="margin-top: 27%; margin-left: 82%; padding-left: 10px; margin-bottom: 30px; position: fixed;"> -->
 
    <div class="line">
-      <div style="height: 44%; width 100%; border: 0px solid #fff;">
+      <div id="content" style="height: 3%; width 100%; border: 0px solid #fff;">
+      <!--
+      born and raised in Michigan. full-time student pursuing a degree in Computer Science at Florida State University. avid Hacker/Maker. hackathons attended: HackNC/VTHacks/HackFSU. dabble in HTML/CSS/JS/C++/iOS/Arduino -->
       </div>
    </div>
 
