--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
          <!-- <div style="clear: both;"></div> -->
       </div>
    </div>
-   <!-- 
-   <div style="margin-top: 27%; margin-left: 82%; padding-left: 10px; margin-bottom: 30px; position: fixed;"> -->
 
    <div class="line">
       <div id="content" style="height: 3%; width 100%; border: 0px solid #fff;">
@@ -74,7 +72,7 @@
 	      <li><a href="">about</a></li>
 	      <li><a href="">resume</a></li>
 	      <li><a href="http://hackfsu.com">hackfsu</a></li>
-	      <li><a href="https://twitter.com/MC_hagan">twitter</a></li>
+	      <li><a href="">portfolio</a></li>
 	   </ul>
    </div>
 
