--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
    <div class="line">
       <div class="header l1">
          <div class="first"> full-time student pursuing </div>
-         <div class="second"> Florida State University</div>
+         <div class="second"> 
+            <div id="stuCont" class="container">
+               <ul class="itemwrap">
+                  <li class="current"><span>Computer Science at</span></li>
+                  <li><span>Florida State University</span></li>
+               </ul>
+            </div>
+         </div>
          <!-- <div style="clear: both;"></div> -->
       </div>
    </div>
@@ -38,14 +45,14 @@
    <div class="line">
       <div class="header l3">
          <div class="first"> hackathons attended </div>
-         <div class="second cont"> 
-         <div id="container" class="container">
-            <ul class="itemwrap">
-               <li class="current"><span>HackNC</span></li>
-               <li><span>VTHacks</span></li>
-               <li><span>HackFSU</span></li>
-            </ul>
-         </div>
+         <div class="second"> 
+            <div id="hackCont" class="container">
+               <ul class="itemwrap">
+                  <li class="current"><span>HackNC</span></li>
+                  <li><span>VTHacks</span></li>
+                  <li><span>HackFSU</span></li>
+               </ul>
+            </div>
          </div>
          <!-- <div style="clear: both;"></div> -->
       </div>
@@ -54,7 +61,17 @@
    <div class="line">
       <div class="header l4">
          <div class="first"> dabble in </div>
-         <div class="second"> HTML </div>
+         <div class="second"> 
+            <div id="dabbleCont" class="container">
+               <ul class="itemwrap">
+                  <li class="current"><span>HTML</span></li>
+                  <li><span>CSS</span></li>
+                  <li><span>JS</span></li>
+                  <li><span>iOS</span></li>
+                  <li><span>Arduino</span></li>
+               </ul>
+            </div>
+         </div>
          <!-- <div style="clear: both;"></div> -->
       </div>
    </div>
