added to dabble

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                   <li><span>JS</span></li>
                   <li><span>iOS</span></li>
                   <li><span>Arduino</span></li>
+                  <li><span>C++</span></li>
                </ul>
             </div>
          </div>
@@ -78,8 +79,6 @@
 
    <div class="line">
       <div id="content" style="height: 3%; width 100%; border: 0px solid #fff;">
-      <!--
-      born and raised in Michigan. full-time student pursuing a degree in Computer Science at Florida State University. avid Hacker/Maker. hackathons attended: HackNC/VTHacks/HackFSU. dabble in HTML/CSS/JS/C++/iOS/Arduino -->
       </div>
    </div>
 
