--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <!-- attempting faux absolute positioning -->
 <div style="overflow: hidden; border: 0px solid #fff; border-radius: 2px;">
 
+<div class="content" id="content">
+<ul class="contentwrap">
+<li class="current">
+
    <div class="line">
       <div class="header">
          <div class="first"> born and raised in </div>
@@ -78,15 +82,26 @@
    </div>
 
    <div class="line">
-      <div id="content" style="height: 3%; width 100%; border: 0px solid #fff;">
+      <div id="spacer" style="height: 3%; width 100%; border: 0px solid #fff;">
       </div>
    </div>
+
+</li>
+<li>
+   <div class="line">
+      <div class="header">
+   <h4>resume goes here</h4>
+      </div>
+   </div>
+</li>
+</ul>
+</div>
 
    <div class="line">
    <div id="fauxNav">
 	   <ul class="nav">
-	      <li><a href="">about</a></li>
-	      <li><a href="">resume</a></li>
+	      <li><a class="about" href="#">about</a></li>
+	      <li><a class="resume" href="#">resume</a></li>
 	      <li><a href="http://hackfsu.com">hackfsu</a></li>
 	      <li><a href="">portfolio</a></li>
 	   </ul>
@@ -102,7 +117,7 @@
 
 <script src="js/classie.js"></script>
 <script src="js/custom.js"></script>
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -111,7 +126,7 @@
   ga('create', 'UA-52705764-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 </body>
 
 </html>
