nav bar displays current page

--- a/index.html
+++ b/index.html
@@ -88,9 +88,16 @@
 
 </li>
 <li>
-   <div class="line">
-      <div class="header">
+   <div class="line" style="margin-top: 0%">
+      <div>
    <h4>resume goes here</h4>
+      </div>
+   </div>
+</li>
+<li>
+   <div class="line" style="margin-top: -20%">
+      <div>
+   <h4>portfolio goes here</h4>
       </div>
    </div>
 </li>
@@ -100,10 +107,10 @@
    <div class="line">
    <div id="fauxNav">
 	   <ul class="nav">
-	      <li><a class="about" href="#">about</a></li>
+	      <li><a class="about current" href="#">about</a></li>
 	      <li><a class="resume" href="#">resume</a></li>
 	      <li><a href="http://hackfsu.com">hackfsu</a></li>
-	      <li><a href="">portfolio</a></li>
+	      <li><a class="port" href="">portfolio</a></li>
 	   </ul>
    </div>
 
