--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <script src="js/classie.js"></script>
 <script src="js/custom.js"></script>
-<!-- <script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -133,7 +133,7 @@
   ga('create', 'UA-52705764-1', 'auto');
   ga('send', 'pageview');
 
-</script> -->
+</script>
 </body>
 
 </html>
