period to slash

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <script src="js/classie.js"></script>
 <script src="js/custom.js"></script>
-<script src="js.ga.js"></script>
+<script src="js/ga.js"></script>
 </body>
 
 </html>
