--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 <li>
    <div class="line" style="margin-top: 0%">
       <div>
-   <h4>resume goes here</h4>
+   <h4>work in progress</h4>
       </div>
    </div>
 </li>
 <li>
    <div class="line" style="margin-top: -20%">
       <div>
-   <h4>portfolio goes here</h4>
+   <h4>work in progress</h4>
       </div>
    </div>
 </li>
