--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-   <link rel="stylesheet" type="text/css" href="main.css">
    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900' rel='stylesheet' type='text/css'>
-   <link rel="stylesheet" type="text/css" href="main.css" />
+   <link rel="stylesheet" type="text/css" href="css/main.css" />
    <script src="js/modernizr.custom.js"></script>
    <title>Matt O'Hagan</title>
 </head>
