--- a/spark.html
+++ b/spark.html
@@ -1,4 +1,5 @@
 <html>
+<!-- modified from http://jflasher.github.io/spark-helper/ -->
 <head>
    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" type="text/css" href="css/main.css" />
