--- a/spark.html
+++ b/spark.html
@@ -10,51 +10,45 @@
 
 <table>
 <td>
-<h4 id="alertt"> spark core testing </h4>
+<h4 id="header"> spark core testing </h4>
 
 <div class="phrase" id="settings-panel">
-  <div id="info-alert"></div>
-  <div class="input-group">
-    <span class="input-group-addon">core id:</span>
+  <div id="info-alert">
+  </div>
+  <div>
+    core id:
     <input type="text" class="form" id="core-id" placeholder="Core ID" spellcheck="false">
   </div>
-  <div class="input-group">
-    <span class="input-group-addon">api token:</span>
+  <div>
+    api token:
     <input type="text" class="form" id="api-token" placeholder="API Token" spellcheck="false">
   </div>  
 </div>
 </td>
 <td>
-<div class="panel panel-primary">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse">
-              functions
-            </a>
-          </h4>
-        </div>
-        <div id="functions" class="panel-collapse collapse in">
-          <div class="panel-body">
-            <div class="row" data-ng-repeat="idx in [1, 2]">
-              <div class="col-lg-5">
-                <div class="input-group">
-                  <span class="input-group-addon phrase">
+<div>
+        <div id="functions">
+          <div>
+            <div data-ng-repeat="idx in [1, 2]">
+              <div>
+                <div>
+                  <span class="phrase">
                     function name
                   </span>
                   <input type="text" class="form" id="method-{{idx}}">
                 </div><!-- /input-group -->
               </div><!-- /.col-lg-6 -->
-              <div class="col-lg-5">
-                <div class="input-group">
-                  <span class="input-group-addon phrase">
+              <div>
+                <div>
+                  <span class="phrase">
                     data
                   </span>
                   <input type="text" class="form" id="data-{{idx}}">
                 </div><!-- /input-group -->
               </div><!-- /.col-lg-6 -->
-              <div class="col-lg-2">
-                <div class="input-group">
-                  <button class="btn btn-success" type="button" id="post-{{idx}}">post</button>
+              <div>
+                <div>
+                  <button class="btn" type="button" id="post-{{idx}}">post</button>
                 </div><!-- /input-group -->
               </div><!-- /.col-lg-6 -->   
               <br/><br/>           
