--- a/jot.html
+++ b/jot.html
@@ -5,9 +5,10 @@
    <title>Matt O'Hagan | Jot</title>
 </head>
 <body>
-	<h4> Thanks for Bookmarking Jot! </h4> 
+	
+	<h4 style="margin-top: 20%;margin-left:20%;"> Drag <a href="">this guy</a> to your bookmark bar.</h4>
 	<script type='text/javascript'>
-		window.onload = function() {
+		/*window.onload = function() {
 			console.log("wtf");
 			var link = "jot.txt"
 			var xhr = new XMLHttpRequest();
@@ -19,7 +20,7 @@
 			else {
 				console.log(xhr.status);
 			}
-		}
+		}*/
 	</script>
 </body>
 </html>
