--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                   <li class="current"><span>HackNC</span></li>
                   <li><span>VTHacks</span></li>
                   <li><span>HackFSU</span></li>
+                  <li><span>MHacks</span></li>
+                  <li><span>HackGT</span></li>
                </ul>
             </div>
          </div>
@@ -67,12 +69,11 @@
          <div class="second"> 
             <div id="dabbleCont" class="container">
                <ul class="itemwrap">
-                  <li class="current"><span>HTML</span></li>
-                  <li><span>CSS</span></li>
-                  <li><span>JS</span></li>
-                  <li><span>iOS</span></li>
-                  <li><span>Arduino</span></li>
+                  <li class="current"><span>HTML/CSS/JS</span></li>
+                  <li><span>NodeJS/Express</span></li>
                   <li><span>C++</span></li>
+                  <li><span>Arduino</span></li>
+                  <li><span>iOS [minimal]</span></li>
                </ul>
             </div>
          </div>
