--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
    <div id="fauxNav">
 	   <ul class="nav">
 	      <li><a class="about current" href="#">about</a></li>
-	      <li><a class="resume" href="#">resume</a></li>
+	      <li><a class="resume" href="Resume.pdf">resume</a></li>
 	      <li><a href="http://hackfsu.com">hackfsu</a></li>
-	      <li><a class="port" href="">portfolio</a></li>
+	      <li><a class="port" href="http://github.com/mattohagan">github</a></li>
 	   </ul>
    </div>
 
