--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
    <link rel="stylesheet" type="text/css" href="css/main.css" />
    <script src="js/modernizr.custom.js"></script>
    <title>Matt O'Hagan</title>
+   <meta name="viewport" content="width=device-width" />
 </head>
 <body>
+  
 
-<!-- attempting faux absolute positioning -->
-<div style="overflow: hidden; border: 0px solid #fff; border-radius: 2px;">
-
-<div class="content" id="content">
-<ul class="contentwrap">
-<li class="current">
+<div class="infoContent">
 
    <div class="line">
       <div class="header">
          <div class="first"> born and raised in </div>
          <div class="second"> Michigan </div>
-         <!-- <div style="clear: both;"></div> -->
+         <div style="clear: both;"></div>
       </div>
    </div>
 
    <div class="line">
-      <div class="header l1">
-         <div class="first"> full-time student pursuing </div>
-         <div class="second"> 
+      <div class="header">
+         <div class="first"> full-time student </div>
+         <div class="second switch"> 
             <div id="stuCont" class="container">
                <ul class="itemwrap">
                   <li class="current"><span>Computer Science at</span></li>
@@ -33,25 +30,43 @@
                </ul>
             </div>
          </div>
-         <!-- <div style="clear: both;"></div> -->
+         <div style="clear: both;"></div>
       </div>
    </div>
 
    <div class="line">
-      <div class="header l2">
+      <div class="header">
          <div class="first"> avid and passionate </div>
          <div class="second"> Hacker</div>
-         <!-- <div style="clear: both;"></div> -->
+         <div style="clear: both;"></div>
       </div>
    </div>
 
    <div class="line">
-      <div class="header l3">
+      <div class="header">
+         <div class="first"> dabble in </div>
+         <div class="second switch"> 
+            <div id="dabbleCont" class="container">
+               <ul class="itemwrap">
+                  <li class="current"><span>HTML5/CSS3</span></li>
+                  <li><span>JavaScript/jQuery</span></li>
+                  <li><span>NodeJS/Express</span></li>
+                  <li><span>C++</span></li>
+                  <li><span>Arduino</span></li>
+               </ul>
+            </div>
+         </div>
+         <div style="clear: both;"></div>
+      </div>
+   </div> 
+
+   <div class="line">
+      <div class="header">
          <div class="first"> hackathons attended </div>
-         <div class="second"> 
+         <div class="second switch"> 
             <div id="hackCont" class="container">
                <ul class="itemwrap">
-                  <li class="current"><span>HackNC</span></li>
+                  <li class="current"><span>HackNC<em>x2</em></span></li>
                   <li><span>VTHacks</span></li>
                   <li><span>HackFSU</span></li>
                   <li><span>MHacks</span></li>
@@ -59,34 +74,31 @@
                </ul>
             </div>
          </div>
-         <!-- <div style="clear: both;"></div> -->
+         <div style="clear: both;"></div>
       </div>
    </div>
+</div>
 
-   <div class="line">
-      <div class="header l4">
-         <div class="first"> dabble in </div>
-         <div class="second"> 
-            <div id="dabbleCont" class="container">
-               <ul class="itemwrap">
-                  <li class="current"><span>HTML/CSS/JS</span></li>
-                  <li><span>NodeJS/Express</span></li>
-                  <li><span>C++</span></li>
-                  <li><span>Arduino</span></li>
-                  <li><span>iOS [minimal]</span></li>
-               </ul>
-            </div>
-         </div>
-         <!-- <div style="clear: both;"></div> -->
-      </div>
+ <div class="headerContent">
+      <a href="http://github.com/mattohagan">GitHub</a>
+      <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">Resume</a>
+      <a href="http://hackfsu.com">HackFSU</a>
+ </div>
+
+<!-- <div class="footerContent">
+   <div>
+      chart of skills here
    </div>
 
-   <div class="line">
-      <div id="spacer" style="height: 3%; width 100%; border: 0px solid #fff;">
-      </div>
+   <div>
+      libraries, frameworks, and stuff used here
    </div>
+</div> -->
 
-</li>
+
+
+
+<!--
 <li>
    <div class="line" style="margin-top: 0%">
       <div>
@@ -103,8 +115,8 @@
 </li>
 </ul>
 </div>
-
-   <div class="line">
+<!--
+   <div class="bottomLine">
    <div id="fauxNav">
 	   <ul class="nav">
 	      <li><a class="about current" href="#">about</a></li>
@@ -116,14 +128,14 @@
 
    <!-- 
    <div style="margin-top: 37.5%; margin-left: 55px; margin-bottom: 15px; position: fixed;"> -->
-   <div id="fauxName">
-      <h4>matt o'hagan</h1>
+   <!-- <div id="fauxName">
+      <h4>matt o'hagan</h4><!-- add email link
    </div>
    </div>
-</div>
+</div> -->
 
 <script src="js/classie.js"></script>
-<script src="js/custom.js"></script>
+<script src="js/custom.js"></script> 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
