added frameworks etc and hackduke

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
          </div>
          <div style="clear: both;"></div>
       </div>
+   </div>
+
+   <div class="line">
+      <div class="header">
+         <div class="first"> tinkered with </div>
+         <div class="second switch"> 
+            <div id="frameCont" class="container">
+               <ul class="itemwrap">
+                  <li class="current"><span>Heroku</span></li>
+                  <li><span>Digital Ocean</span></li>
+                  <li><span>Firebase</span></li>
+                  <li><span>MeteorJS</span></li>
+                  <li><span>MongoDB</span></li>
+               </ul>
+            </div>
+         </div>
+         <div style="clear: both;"></div>
+      </div>
    </div> 
 
    <div class="line">
@@ -71,6 +89,7 @@
                   <li><span>HackFSU</span></li>
                   <li><span>MHacks</span></li>
                   <li><span>HackGT</span></li>
+                  <li><span>HackDuke</span></li>
                </ul>
             </div>
          </div>
