added more frameworks

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                   <li><span>Firebase</span></li>
                   <li><span>MeteorJS</span></li>
                   <li><span>MongoDB</span></li>
+                  <li><span>Parse</span></li>
+                  <li><span>Socket.io</span></li>
                </ul>
             </div>
          </div>
