changed to video link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
  <div class="headerContent">
       <a href="http://github.com/mattohagan">GitHub</a>
       <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">Resume</a>
-      <a href="http://hackfsu.com">HackFSU</a>
+      <a href="https://www.youtube.com/watch?v=NyAzdjWNNQg">HackFSU</a>
  </div>
 
 <!-- <div class="footerContent">
