--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <a href="http://github.com/mattohagan">GitHub</a>
       <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">Resume</a>
       <a href="https://www.youtube.com/watch?v=NyAzdjWNNQg">HackFSU</a>
+      <a href="https://chrome.google.com/webstore/detail/jot/mnemjleajnmodijhnibpekloajfdjjja">Jot</a>
  </div>
 
 <!-- <div class="footerContent">
