--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" type="text/css" href="css/main.css" />
    <script src="js/modernizr.custom.js"></script>
+   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
    <title>Matt O'Hagan</title>
    <meta name="viewport" content="width=device-width" />
 </head>
@@ -86,12 +87,12 @@
          <div class="second switch"> 
             <div id="hackCont" class="container">
                <ul class="itemwrap">
-                  <li class="current"><span>HackNC<em>x2</em></span></li>
-                  <li><span>VTHacks</span></li>
-                  <li><span>HackFSU</span></li>
-                  <li><span>MHacks</span></li>
+                  <li class="current"><span>VTHacks</span></li>
+                  <li><span>MHacks<em>x2</em></span></li>
                   <li><span>HackGT</span></li>
                   <li><span>HackDuke</span></li>
+                  <li><span>HackNC<em>x2</em></span></li>
+                  <li><span>HackFSU</span></li>
                </ul>
             </div>
          </div>
@@ -103,7 +104,7 @@
  <div class="headerContent">
       <a href="http://github.com/mattohagan">GitHub</a>
       <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">Resume</a>
-      <a href="https://www.youtube.com/watch?v=NyAzdjWNNQg">HackFSU</a>
+      <a href="https://www.youtube.com/watch?v=VtgGd9kW550">HackFSU</a>
       <a href="https://chrome.google.com/webstore/detail/jot/mnemjleajnmodijhnibpekloajfdjjja">Jot</a>
  </div>
 
