--- a/index.html
+++ b/index.html
@@ -1,118 +1,93 @@
 <html>
 <head>
-   <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900' rel='stylesheet' type='text/css'>   
    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
    <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
    <link rel="stylesheet" type="text/css" href="css/main.css" />
    <script src="js/modernizr.custom.js"></script>
-   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+   <script src="js/jquery-1.11.0.min.js"></script>
    <script src='js/new.js'></script>
    <title>Matt O'Hagan</title>
    <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-<div class='centered'>
-   Portfolio
-   <hr>
+   <!-- landing page nav bar -->
+   <div class='top'>
+      <div class='leftSide'>
+         <span class='dontshow'>matt o'hagan</span>
+         <div class="footer dontshow">
+            <a href="http://github.com/mattohagan">github</a>
+            <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">resume</a>
+         </div>
+         <div style='clear: both'></div>
+      </div>
+   </div>
+   <!-- second nav bar -->
+   <div class='nav'>
+      <div class='left'>
+         matt o'hagan
+      </div>
+      <div class='right'>
+         <a href="http://github.com/mattohagan">github</a>
+         <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">resume</a>
+      </div>
+   </div>
 
+<div class='centered'>
+   <div class='landing'>
+      <div class='spacer'></div>
+
+      <div class='blurb'>
+         Just incase you wanted to know; 
+         <br/>
+         <br/>
+         I grew up in the mitten (that's Michigan) and study Computer Science at Florida State University. I am a director at <a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a>, have attended 9 hackathons to date, and am working to build up our student tech community through <a href='http://technole.org/'>Technole</a> and <a href='http://www.domistation.com/'>Domi</a>.
+         <br/>
+         <br/>
+         You can scroll down for my portfolio, or just hangout with the birds.
+         <br/>
+         <br/>
+         Cheers!
+      </div>
+   </div>
+
+
+      <!--<div class='header'>
+         portfolio
+         <hr>
+      </div>-->
+   <div class='portfolio'>
+      <div class='proj'>
+         <div class='title'>jot</div>
+         <div class='where'>side project</div>
+         <div class='desc'>
+            With around 10,000 users, this chrome extension replaces the new tab page to quickly keep track of notes.
+         </div>
+      </div>
+      <div class='proj'>
+         <div class='title'>domi</div>
+         <div class='where'>two semester internship</div>
+         <div class='desc'>
+            Built out a full room reservation system from front to back with a dashboard for analytics. Saved my boss 1,000 emails and counting.
+         </div>
+      </div>
+
+   </div>
+   <div class='spacer'></div>
+   <div class='spacer'></div>
+   <div class='spacer'></div>
    <div class='spacer'></div>
    
 </div>
 
 
- <div class='border'>
-   <div class='leftSide'>
-      <span class='dontshow'>matt o'hagan</span>
-      <div class="footer dontshow">
-         <a href="http://github.com/mattohagan">github</a>
-         <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">resume</a>
-      </div>
-   </div>
- </div>
+
 
 <!--
 
    http://coolors.co/app/fafafa-db5461-8aa29e-f5cb5c-686963
-   
-
-<div class="infoContent">
-
-   <div class="line">
-      born and raised in <span>Michigan</span>
-   </div>
-
-   <div class="line">
-      attend <span>Florida State University</span>
-   </div>
-
-   <div class="line">
-      studying <span>Computer Science</span>
-   </div>
-
-   <div class="line">
-      avid and passionate <span>hacker</span>
-   </div>
-
-   <div class="line">
-         <div class="first"> dabble in </div>
-         <div class="second switch"> 
-            <div id="dabbleCont" class="cont">
-               <ul class="itemwrap">
-                  <li class="current"><span>HTML5/CSS3</span></li>
-                  <li><span>JavaScript/jQuery</span></li>
-                  <li><span>NodeJS/Express</span></li>
-                  <li><span>C++</span></li>
-                  <li><span>Arduino</span></li>
-               </ul>
-            </div>
-         </div>
-         <div style="clear: both;"></div>
-   </div>
-
-   <div class="line">
-         <div class="first"> tinkered with </div>
-         <div class="second switch"> 
-            <div id="frameCont" class="cont">
-               <ul class="itemwrap">
-                  <li class="current"><span>Heroku</span></li>
-                  <li><span>Digital Ocean</span></li>
-                  <li><span>Firebase</span></li>
-                  <li><span>MeteorJS</span></li>
-                  <li><span>MongoDB</span></li>
-                  <li><span>Parse</span></li>
-                  <li><span>Socket.io</span></li>
-               </ul>
-            </div>
-         </div>
-         <div style="clear: both;"></div>
-   </div> 
-
-   <div class="line">
-         <div class="first"> hackathons attended </div>
-         <div class="second switch"> 
-            <div id="hackCont" class="cont">
-               <ul class="itemwrap">
-                  <li class="current"><span>VTHacks</span></li>
-                  <li><span>MHacks<em>x2</em></span></li>
-                  <li><span>TreeHacks</span></li>
-                  <li><span>HackGT</span></li>
-                  <li><span>HackDuke</span></li>
-                  <li><span>HackNC<em>x2</em></span></li>
-                  <li><span>SwampHacks</span></li>
-                  <li><span>HackFSU</span></li>
-               </ul>
-            </div>
-         </div>
-         <div style="clear: both;"></div>
-   </div>
-</div>
 
 -->
 
-
-
-<script src="js/classie.js"></script>
-<!--<script src="js/custom.js"></script> -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -123,7 +98,10 @@
   ga('send', 'pageview');
 
 </script>
-   <!--div id="info">
+   <!--
+         This was slightly edited from an example at
+
+   div id="info">
          <a href="http://threejs.org" target="_blank">three.js</a> - <span id="birds"></span> webgl gpgpu birds<br/>
          Select <span id="options"></span> birds<br/>
          Move mouse to disturb birds.
@@ -347,7 +325,9 @@
          varying vec4 vColor;
          varying float z;
          uniform vec3 color;
-         // CHNGE COLOR HERE?
+         //
+         // CHNGE COLOR HERE
+         // 
          void main() {
             // Fake colors for now
             //float z2 = 0.2 + ( 1000. - z ) / 1000. * vColor.x;
@@ -422,7 +402,7 @@
                );
                var b = 0x444444 +
                   ~~(v / 9) / BIRDS * 0x666666;
-               console.log(b);
+               //console.log(b);
 
                var c = {
                   r: 0.541, 
