--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
    <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
    <link rel="stylesheet" type="text/css" href="css/main.css" />
+   <link rel="stylesheet" type="text/css" href="css/octicons/octicons.css" />
    <script src="js/modernizr.custom.js"></script>
    <script src="js/jquery-1.11.0.min.js"></script>
    <script src='js/new.js'></script>
@@ -32,60 +33,100 @@
       </div>
    </div>
 
-<div class='centered'>
    <div class='landing'>
-      <div class='spacer'></div>
+      <div class='centered'>
+         <div class='spacer'></div>
 
-      <div class='blurb'>
-         Just incase you wanted to know; 
-         <br/>
-         <br/>
-         I grew up in the mitten (that's Michigan) and study Computer Science at Florida State University. I am a director at <a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a>, have attended 9 hackathons to date, and am working to build up our student tech community through <a href='http://technole.org/'>Technole</a> and <a href='http://www.domistation.com/'>Domi</a>.
-         <br/>
-         <br/>
-         You can scroll down for my portfolio, or just hangout with the birds.
-         <br/>
-         <br/>
-         Cheers!
+         <div class='blurb'>
+            Just incase you wanted to know; 
+            <br/>
+            <br/>
+            I grew up in the mitten (that's Michigan) and study Computer Science at Florida State University. This is my second year as a director at <a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a>, I have attended 9 hackathons to date, and am working to build up our student tech community through <a href='http://technole.org/'>Technole</a> and <a href='http://www.domistation.com/'>Domi</a>.
+            <br/>
+            <br/>
+            You can scroll down for my portfolio, or just hangout with the birds.
+            <br/>
+            <br/>
+            Cheers!
+         </div>
+      </div>
+      <div id='arrow' class='arrow'>
+         <span class='mega-octicon octicon-chevron-down'></span>
       </div>
    </div>
 
+   <div id='port' class='port'>
+      <div class=''>
+         <div class='centered'>
+            <div class='header'>
+               <a href='#portfolio'></a>
+            </div>
+            <div class='portfolio'>
+               <div class='year'>2015 <!--<span class='mega-octicon octicon-calendar'></span>--></div>
+               <div class='proj'>
+                  <div class='title'>jot</div>
+                  <div class='where'>side project</div>
+                  <div class='desc'>
+                     Chrome extension that replaces the new tab page to allow for quick notes. Currently around 10,000 users.
+                  </div>
+               </div>
+               <div class='proj'>
+                  <div class='title'>domi</div>
+                  <div class='where'>two-semester internship</div>
+                  <div class='desc'>
+                     Room reservation system, analytics dashboard, and conference room signs.
+                  </div>
+               </div>
+               <div class='proj'>
+                  <div class='title'>hippo</div>
+                  <div class='where'>mhacks</div>
+                  <div class='desc'>
+                     Small desktop hardware gadget to visualize your social activity and the day's weather.
+                  </div>
+               </div>
 
-      <!--<div class='header'>
-         portfolio
-         <hr>
-      </div>-->
-   <div class='portfolio'>
-      <div class='proj'>
-         <div class='title'>jot</div>
-         <div class='where'>side project</div>
-         <div class='desc'>
-            With around 10,000 users, this chrome extension replaces the new tab page to quickly keep track of notes.
+
+
+               <div class='year'>2014 <!--<span class='mega-octicon octicon-calendar'></span>--></div>
+               <div class='proj'>
+                  <div class='title'>runaway</div>
+                  <div class='where'>hacknc</div>
+                  <div class='desc'>
+                     Kanye themed random trip generator.
+                  </div>
+               </div>
+               <div class='proj'>
+                  <div class='title'>myo playground</div>
+                  <div class='where'>mhacks</div>
+                  <div class='desc'>
+                     Result of a 12 hour pivot at MHacks IV.
+                  </div>
+               </div>
+               <div class='proj'>
+                  <div class='title'>pioneer</div>
+                  <div class='where'>vthacks</div>
+                  <div class='desc'>
+                     Web app to get news around the world at a glance.
+                  </div>
+               </div>
+               <div class='proj'>
+                  <div class='title'>this site</div>
+                  <div class='where'>side project</div>
+                  <div class='desc'>
+                     Previous version of my personal site.
+                  </div>
+               </div>
+
+            </div>
          </div>
       </div>
-      <div class='proj'>
-         <div class='title'>domi</div>
-         <div class='where'>two semester internship</div>
-         <div class='desc'>
-            Built out a full room reservation system from front to back with a dashboard for analytics. Saved my boss 1,000 emails and counting.
-         </div>
-      </div>
-
    </div>
-   <div class='spacer'></div>
-   <div class='spacer'></div>
-   <div class='spacer'></div>
-   <div class='spacer'></div>
    
-</div>
-
 
 
 
 <!--
-
    http://coolors.co/app/fafafa-db5461-8aa29e-f5cb5c-686963
-
 -->
 
 <script>
@@ -326,7 +367,7 @@
          varying float z;
          uniform vec3 color;
          //
-         // CHNGE COLOR HERE
+         // CHANGE COLOR HERE
          // 
          void main() {
             // Fake colors for now
