remove top left nav, add center box

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <!-- landing page nav bar -->
-   <div class='top'>
+   <!--<div class='top'>
       <div class='leftSide'>
          <span class='dontshow'>matt o'hagan</span>
          <div class="footer dontshow">
@@ -21,7 +21,7 @@
          </div>
          <div style='clear: both'></div>
       </div>
-   </div>
+   </div>-->
    <!-- second nav bar -->
    <div class='nav'>
       <div class='left'>
@@ -35,20 +35,24 @@
 
    <div class='landing'>
       <div class='centered'>
-         <div class='spacer'></div>
+         <div class='before'>Hey! I'm Matt</div>
+         <div class='rectangle'>
+            Avid <a href=''>Hacker</a>
+         </div>
+         <!-- <div class='spacer'></div>
 
          <div class='blurb'>
-            Just incase you wanted to know; 
+            Hello! I'm Matt. 
             <br/>
             <br/>
-            I grew up in the mitten (that's Michigan) and study Computer Science at Florida State University. This is my second year as a director at <a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a>, I have attended 9 hackathons to date, and am working to build up our student tech community through <a href='http://technole.org/'>Technole</a> and <a href='http://www.domistation.com/'>Domi</a>.
+            Two time director at <a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a>, attended 9 hackathons to date, and building up our student tech community through <a href='http://technole.org/'>Technole</a> and <a href='http://www.domistation.com/'>Domi</a>.
             <br/>
             <br/>
             You can scroll down for my portfolio, or just hangout with the birds.
             <br/>
             <br/>
             Cheers!
-         </div>
+         </div> -->
       </div>
       <div id='arrow' class='arrow'>
          <span class='mega-octicon octicon-chevron-down'></span>
