--- a/index.html
+++ b/index.html
@@ -35,9 +35,16 @@
 
    <div class='landing'>
       <div class='centered'>
-         <div class='before'>hey there! i'm matt.</div>
-         <div class='rectangle'>
-            .
+         <div class='before'><span id='phrase'>hey there!</span>  i'm matt.</div>
+         <div class='box'>
+            <div class='top'></div>
+            <div class='right'></div>
+            <div class='bottom'></div>
+            <div class='left'></div>
+            <div class='inside'>hackfsu* director</div>
+         </div>
+         <div class='tooltip'>
+            asterisk* indicates hyperlink
          </div>
          <!-- <div class='spacer'></div>
 
@@ -55,6 +62,7 @@
          </div> -->
       </div>
       <div id='arrow' class='arrow'>
+         <!-- portfolio <br/> -->
          <span class='mega-octicon octicon-chevron-down'></span>
       </div>
    </div>
