work on landing page box

--- a/index.html
+++ b/index.html
@@ -41,11 +41,26 @@
             <div class='right'></div>
             <div class='bottom'></div>
             <div class='left'></div>
-            <div class='inside'>hackfsu* director</div>
+            <div id='infoScroll' class='container inside'>
+               <ul class='itemwrap'>
+                  <li class='current'><span><span id='phrasetwo'>hey there!</span> i'm matt.</span></li>
+                  <li><span>hackfsu director.</span></li>
+                  <li><span>technole member.</span></li>
+                  <li><span>domi intern.</span></li>
+                  <li><span>avid hacker.</span></li>
+                  <li><span>community builder.</span></li>
+               </ul>
+            </div>
          </div>
-         <div class='tooltip'>
-            asterisk* indicates hyperlink
+         <div class='beforeList'>
+            <div><a href=''>HackFSU</a></div>
+            <div><a href=''>Technole</a></div>
+            <div><a href=''>Domi</a></div>
+            <div><a href=''>Hackathons</a></div>
          </div>
+         <!--<div class='tooltip'>
+            scroll down for my portfolio!
+         </div>-->
          <!-- <div class='spacer'></div>
 
          <div class='blurb'>
@@ -62,8 +77,10 @@
          </div> -->
       </div>
       <div id='arrow' class='arrow'>
-         <!-- portfolio <br/> -->
-         <span class='mega-octicon octicon-chevron-down'></span>
+         <div class='inner'>
+            portfolio <br/>
+            <span class='mega-octicon octicon-chevron-down'></span>
+         </div>
       </div>
    </div>
 
