add delays to landing page links

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             </div>
          </div>
          <div class='beforeList'>
-            <div><a href=''>HackFSU</a></div>
-            <div><a href=''>Technole</a></div>
-            <div><a href=''>Domi</a></div>
-            <div><a href=''>Hackathons</a></div>
+            <div><a href='hello'>HackFSU</a></div>
+            <div id='second'><a href='hello'>Technole</a></div>
+            <div id='third'><a href='hello'>Domi</a></div>
+            <div id='fourth'><a href='hello'>Hackathons</a></div>
          </div>
          <!--<div class='tooltip'>
             scroll down for my portfolio!
@@ -96,21 +96,21 @@
                   <div class='title'>jot</div>
                   <div class='where'>side project</div>
                   <div class='desc'>
-                     Chrome extension that replaces the new tab page to allow for quick notes. Currently around 10,000 users.
+                     Chrome extension. Currently around 10,000 users.
                   </div>
                </div>
                <div class='proj'>
                   <div class='title'>domi</div>
-                  <div class='where'>two-semester internship</div>
+                  <div class='where'>internship</div>
                   <div class='desc'>
-                     Room reservation system, analytics dashboard, and conference room signs.
+                     Room reservation system & dashboard.
                   </div>
                </div>
                <div class='proj'>
                   <div class='title'>hippo</div>
                   <div class='where'>mhacks</div>
                   <div class='desc'>
-                     Small desktop hardware gadget to visualize your social activity and the day's weather.
+                     Desktop hardware gadget.
                   </div>
                </div>
 
@@ -135,7 +135,7 @@
                   <div class='title'>pioneer</div>
                   <div class='where'>vthacks</div>
                   <div class='desc'>
-                     Web app to get news around the world at a glance.
+                     Web app to get news around the world.
                   </div>
                </div>
                <div class='proj'>
