start work on third portfolio attempt

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
    <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
+   <link rel="stylesheet" type="text/css" href="css/landing.css" />
    <link rel="stylesheet" type="text/css" href="css/main.css" />
    <link rel="stylesheet" type="text/css" href="css/octicons/octicons.css" />
    <script src="js/modernizr.custom.js"></script>
    <script src="js/jquery-1.11.0.min.js"></script>
-   <script src='js/new.js'></script>
+   <script src='js/index.js'></script>
    <title>Matt O'Hagan</title>
    <meta name="viewport" content="width=device-width" />
 </head>
@@ -22,7 +22,8 @@
          <div style='clear: both'></div>
       </div>
    </div>-->
-   <!-- second nav bar -->
+
+   <!-- second nav bar 
    <div class='nav'>
       <div class='left'>
          matt o'hagan
@@ -31,57 +32,114 @@
          <a href="http://github.com/mattohagan">github</a>
          <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">resume</a>
       </div>
-   </div>
+   </div> -->
 
    <div class='landing'>
       <div class='centered'>
-         <div class='before'><span id='phrase'>hey there!</span>  i'm matt.</div>
-         <div class='box'>
-            <div class='top'></div>
-            <div class='right'></div>
-            <div class='bottom'></div>
-            <div class='left'></div>
-            <div id='infoScroll' class='container inside'>
-               <ul class='itemwrap'>
-                  <li class='current'><span><span id='phrasetwo'>hey there!</span> i'm matt.</span></li>
-                  <li><span>hackfsu director.</span></li>
-                  <li><span>technole member.</span></li>
-                  <li><span>domi intern.</span></li>
-                  <li><span>avid hacker.</span></li>
-                  <li><span>community builder.</span></li>
-               </ul>
+         <!--<div class='before'><span id='phrase'>hey there!</span>  i'm matt.</div>-->
+         <div class='box-cont'>
+            <div class='box'>
+               <div class='top'></div>
+               <div class='right'></div>
+               <div class='bottom'></div>
+               <div class='left'></div>
+               <div id='infoScroll' class='container inside final'>
+                  <ul class='itemwrap'>
+                     <li class='current'><span><span id='phrasetwo'>hey there!</span> i'm matt.</span></li>
+                     <li><span>hackfsu director.</span></li>
+                     <li><span>technole member.</span></li>
+                     <li><span>domi intern.</span></li>
+                     <li><span>avid hacker.</span></li>
+                     <li><span>community builder.</span></li>
+                  </ul>
+               </div>
             </div>
+            <div style='clear: both'></div>
          </div>
-         <div class='beforeList'>
-            <div><a href='hello'>HackFSU</a></div>
-            <div id='second'><a href='hello'>Technole</a></div>
-            <div id='third'><a href='hello'>Domi</a></div>
+
+
+
+         <div class='container landingPort'>
+            <!--<div class='year'>2015 <!--<span class='mega-octicon octicon-calendar'></span></div-->
+            <div class='row'>
+               <div class='proj four columns'>
+                  <div class='title'>hackfsu</div>
+                  <div class='where'>mhacks</div>
+                  <div class='desc'>
+                     Annual hackathon at Florida State.
+                  </div>
+               </div>
+               <div class='proj four columns'>
+                  <div class='title'>technole</div>
+                  <div class='where'>vthacks</div>
+                  <div class='desc'>
+                     Student tech organization.
+                  </div>
+               </div>
+               <div class='proj four columns'>
+                  <div class='title'>runaway</div>
+                  <div class='where'>hacknc</div>
+                  <div class='desc'>
+                     Kanye themed roadtrip generator.
+                  </div>
+               </div>
+            </div>
+            <div class='row'>
+               <div class='proj eight columns'>
+                  <div class='title'>jot</div>
+                  <div class='where'>side project</div>
+                  <div class='desc'>
+                     Chrome extension with around 10,000 users.
+                  </div>
+               </div>
+               <div class='proj four columns'>
+                  <div class='title'>hippo</div>
+                  <div class='where'>mhacks</div>
+                  <div class='desc'>
+                     Desktop hardware gadget.
+                  </div>
+               </div>
+            </div>
+            <div class='row'>
+               <div class='proj four columns'>
+                  <div class='title'>this site</div>
+                  <div class='where'>side project</div>
+                  <div class='desc'>
+                     The previous version.
+                  </div>
+               </div>
+               <div class='proj eight columns'>
+                  <div class='title'>domi</div>
+                  <div class='where'>internship</div>
+                  <div class='desc'>
+                     Room reservation system & dashboard.
+                  </div>
+               </div>
+            </div>
+
+            
+         </div>
+
+
+
+
+
+         <!--<div class='beforeList'>
+            <div><a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a></div>
+            <div id='second'><a href='http://technole.org/'>Technole</a></div>
+            <div id='third'><a href='http://www.domistation.com/'>Domi</a></div>
             <div id='fourth'><a href='hello'>Hackathons</a></div>
          </div>
          <!--<div class='tooltip'>
             scroll down for my portfolio!
          </div>-->
-         <!-- <div class='spacer'></div>
-
-         <div class='blurb'>
-            Hello! I'm Matt. 
-            <br/>
-            <br/>
-            Two time director at <a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a>, attended 9 hackathons to date, and building up our student tech community through <a href='http://technole.org/'>Technole</a> and <a href='http://www.domistation.com/'>Domi</a>.
-            <br/>
-            <br/>
-            You can scroll down for my portfolio, or just hangout with the birds.
-            <br/>
-            <br/>
-            Cheers!
-         </div> -->
       </div>
-      <div id='arrow' class='arrow'>
+      <!--<div id='arrow' class='arrow'>
          <div class='inner'>
             portfolio <br/>
             <span class='mega-octicon octicon-chevron-down'></span>
          </div>
-      </div>
+      </div> -->
    </div>
 
    <div id='port' class='port'>
