add all landing page images

--- a/final.html
+++ b/final.html
@@ -29,7 +29,7 @@
             <div class='row'>
                <div class='proj four columns'>
                   <div class='overlay'></div>
-                  <img id='hackfsu' src='hackfsuOpening.jpg' />
+                  <img id='hackfsu' src='img/hackfsuOpening.jpg' />
                   <div class='title'>hackfsu</div>
                   <div class='where'>mhacks</div>
                   <div class='desc'>
@@ -37,6 +37,8 @@
                   </div>
                </div>
                <div class='proj eight columns'>
+                  <div class='overlay'></div>
+                  <img id='domi' src='img/domi-graph.png' />
                   <div class='title'>domi</div>
                   <div class='where'>internship</div>
                   <div class='desc'>
@@ -46,6 +48,8 @@
             </div>
             <div class='row'>
                <div class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='technole' src='img/technole.png' />
                   <div class='title'>technole</div>
                   <div class='where'>vthacks</div>
                   <div class='desc'>
@@ -53,6 +57,8 @@
                   </div>
                </div>
                <div class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='kanye' src='img/kanye1.png' />
                   <div class='title'>runaway</div>
                   <div class='where'>hacknc</div>
                   <div class='desc'>
@@ -60,6 +66,8 @@
                   </div>
                </div>
                <div class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='hippo' src='img/hippo.jpg' />
                   <div class='title'>hippo</div>
                   <div class='where'>mhacks</div>
                   <div class='desc'>
@@ -69,6 +77,8 @@
             </div>
             <div class='row'>
                <div class='proj eight columns'>
+                  <div class='overlay'></div>
+                  <img id='jot' src='img/jotScreen3.png' />
                   <div class='title'>jot</div>
                   <div class='where'>side project</div>
                   <div class='desc'>
@@ -76,6 +86,8 @@
                   </div>
                </div>
                <div class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='previous-site' src='img/previous-site.png' />
                   <div class='title'>this site</div>
                   <div class='where'>side project</div>
                   <div class='desc'>
