--- a/final.html
+++ b/final.html
@@ -85,7 +85,7 @@
                      Chrome extension with around 10,000 users.
                   </div>
                </div>
-               <div class='proj four columns'>
+               <div class='proj four columns'><a href='oldSite/'>
                   <div class='overlay'></div>
                   <img id='previous-site' src='img/previous-site.png' />
                   <div class='title'>this site</div>
@@ -93,6 +93,7 @@
                   <div class='desc'>
                      The previous version.
                   </div>
+                  </a>
                </div>
             </div>
          </div>
