add effect for changing pages

--- a/final.html
+++ b/final.html
@@ -47,7 +47,7 @@
                </div>
             </div>
             <div class='row'>
-               <div class='proj four columns'>
+               <div data-link='technole' class='proj four columns'>
                   <div class='overlay'></div>
                   <img id='technole' src='img/technole.png' />
                   <div class='title'>technole</div>
@@ -56,7 +56,7 @@
                      Student tech organization.
                   </div>
                </div>
-               <div class='proj four columns'>
+               <div data-link='runaway' class='proj four columns'>
                   <div class='overlay'></div>
                   <img id='kanye' src='img/kanye1.png' />
                   <div class='title'>runaway</div>
@@ -85,7 +85,7 @@
                      Chrome extension with around 10,000 users.
                   </div>
                </div>
-               <div class='proj four columns'><a href='oldSite/'>
+               <div data-link='oldSite/' class='proj four columns'>
                   <div class='overlay'></div>
                   <img id='previous-site' src='img/previous-site.png' />
                   <div class='title'>this site</div>
@@ -93,7 +93,6 @@
                   <div class='desc'>
                      The previous version.
                   </div>
-                  </a>
                </div>
             </div>
          </div>
