start work on project pages

--- a/final.html
+++ b/final.html
@@ -27,7 +27,7 @@
          </div>
          <div class='portfolio'>
             <div class='row'>
-               <div class='proj four columns'>
+               <div data-link='hackfsu.html' class='proj four columns'>
                   <div class='overlay'></div>
                   <img id='hackfsu' src='img/hackfsuOpening.jpg' />
                   <div class='title'>hackfsu</div>
